name:                hspark
version:             0.1.0.0
synopsis:            Implementation of Apache Spark RDD in Haskell
description:         Please see README.md
homepage:            http://github.com/yogeshsajanikar/hspark#readme
license:             BSD3
license-file:        LICENSE
author:              Yogesh Sajanikar
maintainer:          yogesh_sajanikar@yahoo.com
copyright:           2016 Yogesh Sajanikar
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Spark
                     , Spark.RDD
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hspark-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hspark
  default-language:    Haskell2010

test-suite hspark-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspark
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hspark
